# Kiara-hackathonb3

./: .env  .env.example  .gitignore  README.md  README_kiara_20250807_103408.md  README_kiara_20250807_104121.md  README_kiara_20250807_104711.md  SETUP.md  kiara_cli.py  kiara_entry.py  kiara_interactive_enhanced.py  pyproject.toml  requirements.txt  run_kiara.py
api/: main.py  test_api.py
cache/: github_repos.db
src/: __init__.py  auth_manager.py  azure_devops_client.py  cache_manager.py  config.py  config.py.bak  doc_generator.py  groq_analyzer.py  language_detector.py  local_analyzer.py  main.py  mcp_client.py  models.py  oci_analyzer.py  readme_templates.py  readme_templates.py.backup  simple_commit_tracker.py  smart_commit_detector.py  template_engine.py  validators.py  vision_processor.py  xai_analyzer.py
